--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.20",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "@types/react-bootstrap": "^0.32.35",
     "@types/styled-components": "^5.1.26",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-reveal": "^1.2.2",
-    "styled-components": "^6.0.7"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -39,7 +43,7 @@
     "react-router-dom": "^6.11.2",
     "react-router-hash-link": "^2.4.3",
     "sort-by": "^1.2.0",
-    "styled-components": "^6.0.0-rc.1",
+    "styled-components": "^6.1.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
