--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.49.2",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@emailjs/browser": "^3.11.0",
