--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.14.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "@types/react-bootstrap": "^0.32.35",
@@ -20,8 +21,10 @@
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-hook-form": "^7.49.2",
+    "react-iframe": "^1.8.5",
     "react-reveal": "^1.2.2",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -49,6 +52,7 @@
     "react-router-hash-link": "^2.4.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
