--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-sitemap": "node src/sitemap.js"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.23.9",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.4",
@@ -17,11 +19,17 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "@types/react-bootstrap": "^0.32.35",
     "@types/styled-components": "^5.1.26",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.49.2",
     "react-iframe": "^1.8.5",
     "react-reveal": "^1.2.2",
+    "react-router": "^6.22.0",
+    "react-router-config": "^5.1.1",
+    "react-router-sitemap": "^1.2.0",
+    "sitemap": "^7.1.1",
     "swiper": "^11.0.5",
     "zod": "^3.22.4"
   },
@@ -32,6 +40,7 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-router-hash-link": "^2.4.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
